--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ h1 > a {
 }
 
 #domain-regex {
-  width: 350px;
+  width: 300px;
 }
 
 #max-cost {
@@ -30,6 +30,10 @@ h1 > a {
 
 #min-cost {
   width: 75px;
+}
+
+#min-date {
+  width: 180px;
 }
 
 #form {
@@ -84,5 +88,11 @@ a:visited {
 strong {
   display: inline-block;
   min-width: 75px;
+  margin-right: 1em;
+}
+
+.date {
+  display: inline-block;
+  min-width: 110px;
   margin-right: 1em;
 }
